--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Fabrizio Andre",
   "license": "MIT",
   "devDependencies": {
+    "husky": "^7.0.4",
     "jest": "^27.5.1",
     "standard": "^16.0.4"
   },
@@ -29,8 +30,5 @@
   "keywords": [
     "Gilden Rose",
     "Refactoring"
-  ],
-  "dependencies": {
-    "husky": "^7.0.4"
-  }
+  ]
 }
